index.css
.main-bg-color {
  background-color: #1a428a !important;
  color: white;
}

.secondary-bg-color {
  background-color: #db303c !important;
  color: white;
}

.terciary-bg-color {
  background-color: #fde405;
}

.btn-primary {
  background-color: #1a428a;
  border-color: #1a428a;
}
.btn-primary:hover {
  background-color: #163a72;
  border-color: #163a72;
}

body {
  font-family: Sans-serif;
}

.features-section {
  position: relative;
  width: 100%;
  height: 100vh;
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  text-align: center;
  background-image: url("images/profesional-que-conduce-maquina.jpg");
}

.features-section .container {
  position: relative;
  z-index: 2;
}

.features-section::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7); /* Adjust opacity as needed */
  z-index: 1;
}

.hero-section {
  background: url("images/background_worker.jpg") no-repeat center center/cover;
  position: relative;
  width: 100%;
  height: 50vh;
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  text-align: center;
}

.hero-section::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.3); /* Adjust opacity as needed */
  z-index: 1;
}

.hero-section .container {
  position: relative;
  z-index: 2;
}

.hero-section h1,
.hero-section p {
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
  font-family: Roboto;
  /* Subtle shadow for readability */
}

.hero-section h1 {
  font-weight: bold;
}

.footer {
  background-color: #1a428a;
  color: white;
  padding: 20px 0;
}

.about-section {
  background-color: #f8f9fa;
  padding: 60px 20px;
}
h2 {
  font-size: 2.5rem;

  margin-bottom: 40px;
  font-weight: 700;
}

.card {
  border: none;
  background: #ffffff;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.card img {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.card-body p {
  font-size: 1rem;
  color: #555;
}

.card-body small {
  font-style: italic;
  color: #999;
}

@media (max-width: 768px) {
  .card img {
    border-radius: 10px 10px 0 0;
  }

  .row.g-0 {
    flex-direction: column;
  }
}

.roboto-thin {
  font-family: "Roboto", serif;
  font-weight: 100;
  font-style: normal;
}

.roboto-light {
  font-family: "Roboto", serif;
  font-weight: 300;
  font-style: normal;
}

.roboto-regular {
  font-family: "Roboto", serif;
  font-weight: 400;
  font-style: normal;
}

.roboto-medium {
  font-family: "Roboto", serif;
  font-weight: 500;
  font-style: normal;
}

.roboto-bold {
  font-family: "Roboto", serif;
  font-weight: 700;
  font-style: normal;
}

.roboto-black {
  font-family: "Roboto", serif;
  font-weight: 900;
  font-style: normal;
}

.roboto-thin-italic {
  font-family: "Roboto", serif;
  font-weight: 100;
  font-style: italic;
}

.roboto-light-italic {
  font-family: "Roboto", serif;
  font-weight: 300;
  font-style: italic;
}

.roboto-regular-italic {
  font-family: "Roboto", serif;
  font-weight: 400;
  font-style: italic;
}

.roboto-medium-italic {
  font-family: "Roboto", serif;
  font-weight: 500;
  font-style: italic;
}

.roboto-bold-italic {
  font-family: "Roboto", serif;
  font-weight: 700;
  font-style: italic;
}

.roboto-black-italic {
  font-family: "Roboto", serif;
  font-weight: 900;
  font-style: italic;
}

.ws-btn {
  position: fixed;
  width: 60px;
  height: 60px;
  bottom: 40px;
  right: 40px;
  background-color: #25d366;
  color: #fff;
  border-radius: 50px;
  text-align: center;
  font-size: 30px;
  z-index: 100;
}

.ws-btn i {
  margin-top: 8px;
  display: inline-block;
}

